# HIShells

./: .gitignore  README.md  environment.yml  pyproject.toml  python.py
HI Bubble Detection/: 2DCNN.py  NGC 2403_shells.reg  TrainModel.py  TrainingData.py  TrainingMask.py  data_processing.py  kerasTraining.py  nonML.py  shellVisualization.py  train_model.py  training_log.csv  training_log_20min.csv
HI Bubble Detection/infer_v2_out/: detections.csv  detections_fk5.reg
HI Bubble Detection/masks_out/: derived_catalog.csv
HI Bubble Detection/models/: unet_shell_20min.keras
HI Bubble Detection/patches_256s192/: index.csv  (+88 more)
all_galaxy_shells/: .gitignore  Makefile  README.md  generate_folders.py
hishells/: __init__.py  augment.py  candidates.py  catalog.py  catalog_bayes.py  cubes.py  data.py  eval.py  loss.py  model.py  predict.py  pvcut.py  train.py  windows.py
notebooks/: 01_explore_catalog.ipynb  02_cube_sanity.ipynb  03_pvcut_examples.ipynb  04_window_inspection.ipynb  05_training_diagnostics.ipynb  06_failure_analysis.ipynb  07_mc_dropout_calibration.ipynb  08_baseline_comparison.ipynb
pv_shells/: pv_config_NGC2403.yaml  pv_config_NGC628.yaml  pv_preview_NGC3184._resolved.yaml  pv_preview_NGC3184.yaml  pv_preview_NGC628._resolved.yaml  pv_preview_NGC628.yaml  requirements.txt
scripts/: diagnose_pos_windows.py  eval_logo.py  fetch_things.py  predict_galaxy.py  run_baseline.py  train_logo.py
tests/: conftest.py  test_augment.py  test_candidates.py  test_catalog.py  test_catalog_bayes.py  test_data.py  test_model.py  test_mtb.py  test_pvcut.py
(+272 files in other folders)
